--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/react": "11.1.4",
     "bootstrap": "^4.5.3",
+    "fslightbox-react": "^1.6.2",
     "gatsby": "^2.26.1",
     "gatsby-source-prismic": "^3.3.3",
     "react": "^16.12.0",
