--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-helmet": "5.2.1",
     "react-iframe": "^1.8.0",
     "react-pdf": "4.1.0",
+    "react-slick": "^0.28.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
