--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "lint": "eslint src/**/*.js"
   },
   "dependencies": {
     "@emotion/react": "11.1.4",
@@ -31,6 +32,9 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "eslint": "^7.23.0",
+    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-react": "^7.23.1",
     "gatsby-disable-404": "^0.2.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "prettier": "2.2.1"
