--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "prettier": "prettier --config .prettierrc 'src/**/*.js' --write",
     "lint": "eslint src/**/*.js"
   },
   "dependencies": {
