--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-feather": "^2.0.9",
     "react-helmet": "5.2.1",
     "react-iframe": "^1.8.0",
+    "react-loader-spinner": "^4.0.0",
     "react-pdf": "4.1.0",
     "react-slick": "^0.28.0",
     "slick-carousel": "^1.8.1",
